--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,10 @@
         <item name="colorControlActivated">@color/blueDarkOpacity</item>
     </style>
 
+    <style name="AppCompatAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:textColorPrimary">@color/colorPrimaryDark</item>
+        <item name="android:background">@android:color/white</item>
+        <item name="textColorAlertDialogListItem">@color/colorPrimary</item>
+    </style>
+
 </resources>
