--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -63,7 +63,7 @@
                     android:id="@+id/etxId"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="textCapSentences"
+                    android:inputType="number"
                     android:textColor="@color/purple"
                     android:textSize="14sp"
                     android:theme="@style/TextInputEditText" />
